--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-react-app": "^9.0.0",
     "grunt": "^1.0.4",
     "grunt-babel": "^8.0.0",
+    "grunt-sass": "^3.1.0",
+    "node-sass": "^4.12.0",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {}
